add product form

--- a/src/app/core/product-feature/product-listing/product-listing.component.html
+++ b/src/app/core/product-feature/product-listing/product-listing.component.html
@@ -16,7 +16,7 @@
             </a>
         </div>
         <!-- items -->
-        <div class="item-listing__items item-listing--3items">
+        <div class="item-listing__items item-listing--3items" style="width:100%">
             <!-- medium 8 item -->
          <app-product-item class="item-medium-1" *ngFor="let item of productArray" [productItem]="item" >
 
