--- a/src/app/core/product-feature/product-form/product-form.component.html
+++ b/src/app/core/product-feature/product-form/product-form.component.html
@@ -35,13 +35,17 @@
                             <div class="form-group " [ngClass]="{'invalid': nameInputElement.touched && nameInputElement.invalid } ">
                                 <label for="">Name</label>
                                 <input class="form-control" type="text" name="name" ngModel id="" 
-                                [ngModel]=" editMode ? product.data[0].name:''" required pattern ="^[\u0000-\u007F]+$" #nameInputElement= ngModel />
+                                [(ngModel)]="product.name" required pattern ="^[\u0000-\u007F]+$" #nameInputElement= ngModel />
                             </div>  
                             <span *ngIf="nameInputElement.touched && nameInputElement.invalid && nameInputElement.control.errors?.['required']"> this Faild is required </span> 
                             <span *ngIf="nameInputElement.touched && nameInputElement.invalid && nameInputElement.control.errors?.['pattern']"> Please enter valid data in english letter  </span>
                             <div class="form-group">
                                 <label for="">Description</label>
-                                <textarea class="form-control" name="description" ngModel id="" cols="30" rows="4" [ngModel]="editMode ? product.data[0].description : ' '"></textarea>
+                                <textarea class="form-control" name="description" ngModel id="" cols="30" rows="4"[(ngModel)]="product.description"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="">Image Path</label>
+                                <input class="form-control" name="imagepath" ngModel id="" [(ngModel)]="product.imagepath">
                             </div>
                         </div>
                         <div class="tabs__body ">
