--- a/src/app/core/product-feature/product-form/product-form.component.html
+++ b/src/app/core/product-feature/product-form/product-form.component.html
@@ -18,6 +18,10 @@
                 <span class="slider__indicator"></span>
                 <span class="slider__indicator"></span>
             </div>
+            <!-- <input type="file" (change)="onFileChange($event)" /> -->
+
+            <!-- <input type="file" style="margin-left: 10px;" (change)="onSelect($event)" accept="image/*"> -->
+
         </div>
         <div class="add-product__data">
             <div class="form-controls">
