--- a/src/app/core/product-feature/product-listing/product-listing.component.html
+++ b/src/app/core/product-feature/product-listing/product-listing.component.html
@@ -1,10 +1,14 @@
+<section>
+    <h2 class="text-center">WELCOME TO OUR RESTAURANT</h2>
+</section>
+
 <div class="container">
     <!-- filters -->
   <app-product-filtering  class="filters"></app-product-filtering>
     <!-- Items -->
     <section class="item-listing">
         <!-- tools (sorting , change view , exporting) -->
-        <div class="item-listing__tools">
+        <!-- <div class="item-listing__tools">
             <select class="form-control" name="" id="">
                 <option value="1">Featured</option>
                 <option value="2">Price low to high</option>
@@ -14,7 +18,7 @@
             <a class="action-btn" routerLink="product-add">
                 <i class="fas fa-plus"></i>
             </a>
-        </div>
+        </div> -->
         <!-- items -->
         <div class="item-listing__items item-listing--3items" style="width:100%">
             <!-- medium 8 item -->
