--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
 <!-- <app-product-listing></app-product-listing> -->
 <!-- <app-test></app-test> -->
