--- a/src/assets/sass/components/_list.scss
+++ b/src/assets/sass/components/_list.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     &__item
     {
-        background-color: white; 
+        background-color: #343a40; 
         padding-bottom: .8rem;
         padding-top: .8rem;
         padding-left: 1.2rem; 
