--- a/src/assets/sass/layout/_nav.scss
+++ b/src/assets/sass/layout/_nav.scss
@@ -1,12 +1,10 @@
 .nav
 {
     
-    // &__items
-    // {
-
-    // }
     &__item
     {
+        color: white;
+
         &.dropdown
         {
             > .dropdown__body
@@ -30,13 +28,14 @@
     &__link
     {
         text-transform: uppercase;
-        color:$gray-900;
+        color:white;
         font-weight: 700;
         font-size: 1.2rem;
         padding: 2.3rem 1.5rem;
         display: flex;
         align-items: center;
         justify-content: center;
+        text-decoration: none;
 
         &:hover
         {
