--- a/src/app/core/product-feature/product-form/product-form.component.html
+++ b/src/app/core/product-feature/product-form/product-form.component.html
@@ -1,5 +1,5 @@
 <div class=" container">
-    <form class="add-product" #productForm=ngForm>
+    <form class="add-product m-5" #productForm=ngForm>
         <div class="add-product__images slider">
             <div class="add-product__image-actions">
                 <div class="add-product__image-action">
