--- a/src/app/core/product-feature/product-listing/product-listing.component.html
+++ b/src/app/core/product-feature/product-listing/product-listing.component.html
@@ -1,12 +1,12 @@
 <section>
-    <h2 class="text-center">WELCOME TO OUR RESTAURANT</h2>
+    <h2 class="text-center p-5 m-2">WELCOME TO OUR RESTAURANT</h2>
 </section>
 
 <div class="container">
     <!-- filters -->
   <app-product-filtering  class="filters"></app-product-filtering>
     <!-- Items -->
-    <section class="item-listing">
+    <section class="item-listing pt-5" >
         <!-- tools (sorting , change view , exporting) -->
         <!-- <div class="item-listing__tools">
             <select class="form-control" name="" id="">
