--- a/src/app/core/product-feature/product-filtering/product-filtering.component.html
+++ b/src/app/core/product-feature/product-filtering/product-filtering.component.html
@@ -8,9 +8,9 @@
     <!-- filter list -->
     <div>
         <!-- filter header -->
-        <h3>Categories</h3><br>
+        <h3>Categories</h3>
         <!-- filter list -->
-        <ul class="list list--vr-separator">
+        <ul class="list list--vr-separator mt-3">
             <li class="link list__item" *ngFor="let category of categoryArray; let i = index" (click)="getFilterCategory(i)"><h5><i class="link__icon fas fa-angle-right"></i>{{category.name}}</h5></li>
         </ul>
     </div>
