--- a/src/assets/sass/components/_item-medium-1.scss
+++ b/src/assets/sass/components/_item-medium-1.scss
@@ -38,7 +38,7 @@
         top: -5rem;
         opacity: 0;
         width:100%;
-        background-color: $color-primary;
+        background-color: #ff5e14;
         font-size:1rem;
         color:$white;
         text-transform: uppercase;
@@ -47,7 +47,7 @@
         justify-content: center;
         padding: 1.5rem;
         transition: all .2s ;
-        
+        text-decoration: none;
     }
 
     &:hover
@@ -57,6 +57,8 @@
             top: 0;
             opacity: 1;
             z-index: 3;
+            color:#fff;
+          
         }
         .item-medium-1__image
         {
