--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -33,7 +33,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav__link" href="#services">About</a>
+            <a class="nav__link" routerLink="about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav__link" href="#portfolio">Contact Us</a>
