--- a/src/app/core/product-feature/about-us/about-us.component.scss
+++ b/src/app/core/product-feature/about-us/about-us.component.scss
@@ -4,3 +4,19 @@ table{font-size: 18px;
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;}
+  div.gradient{
+    background-image: linear-gradient(90deg,  #FF5E14 ,#595C5F)
+  }
+
+ .black{
+   color: #595C5F;
+ }
+  p{width:50%;
+    color:#FFF;
+}
+h2
+{color: #FFF;}
+
+.orange{
+  color: #FF5E14;
+}
