--- a/src/app/core/product-feature/product-form/product-form.component.html
+++ b/src/app/core/product-feature/product-form/product-form.component.html
@@ -3,37 +3,19 @@
         <div class="add-product__images slider">
             <div class="add-product__image-actions">
                 <div class="add-product__image-action">
-                    <a href="#"><i class="fas fa-plus-square"></i></a>
-                    <a href="#"><i class="fas fa-edit"></i></a>
-                    <a href="#"><i class="fas fa-trash-alt"></i></a>
+                    <label for="files" class="btn">Select New Image</label>
+                    <input id="files" type="file" style="visibility:hidden;" (change)="onSelect($event)" accept="image/*">
+
                 </div>
             </div>
             <div class="slider__items">
-                <div class="slider__item active" style="background-image: url(assets/img/apple-touch-icon.png)"></div>
-                <div class="slider__item" style="background-image: url(img/products/product-grey-7.jpg)"></div>
-                <div class="slider__item" style="background-image: url(img/products/product-grey-7.jpg)"></div>
+                <div class="slider__item active" [style]="'background-image:url(' + product.imagepath + ')'"></div>
             </div>
-            <div class="slider__indicators">
-                <span class="slider__indicator active"></span>
-                <span class="slider__indicator"></span>
-                <span class="slider__indicator"></span>
-            </div>
-            <!-- <input type="file" (change)="onFileChange($event)" /> -->
-
-            <!-- <input type="file" style="margin-left: 10px;" (change)="onSelect($event)" accept="image/*"> -->
-
+            
         </div>
-        <div class="add-product__data">
+        <div class="add-product__data col-md-6">
             <div class="form-controls">
                 <section class="tabs">
-                    <div class="tabs__headers">
-                        <div class="tabs__header active">
-                            English
-                        </div>
-                        <div class="tabs__header">
-                            Arabic
-                        </div>
-                    </div>
                     <div class="tabs__bodies">
                         <div class="tabs__body active">
                             <div class="form-group " [ngClass]="{'invalid': nameInputElement.touched && nameInputElement.invalid } ">
@@ -73,13 +55,6 @@
                 
                 <div class="add-product__discount">
                     <div class="form-group">
-                        <label for="">Satus</label>
-                        <div class="form-group__radios">
-                            <div class="form-group__radio"><input type="radio" name="" id=""><span>On Sale</span></div>
-                            <div class="form-group__radio"><input type="radio" name="" id=""><span>Not On Sale</span></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
                         <label for="">Discount</label>
                         <input class="form-control" type="number" ngModel name="discount" id="" [(ngModel)]="product.discount" >
                     </div>
@@ -98,19 +73,6 @@
                     </select>
                 </div>
 
-                <div class="taged-textbox form-group">
-                    <label class="taged-textbox__lable" for="">Tags</label>
-                    <div class="taged-textbox__data">
-                        <div class="taged-textbox__tags">
-                            <div  *ngFor="let tag of tagArray" class="taged-textbox__tag"><span>{{tag.name}}</span><a href="#" class="taged-textbox__remove">
-                                <i class="fas fa-times"></i></a></div>
-                        </div>
-                        <div class="taged-textbox__clear">
-                            <a href="#"><i class="fas fa-times"></i></a>
-                        </div>
-                    </div>
-                    <input class="taged-textbox__textbox form-control" #tagInput (keyup.enter)="addtag()" type="text" name="" id="">
-                </div>
                 <div class="add-product__actions">
                     <button href="#" class="btn btn--gray">Cancel</button>
                     <!-- [disabled]="!productForm.valid" -->
