add product edit

--- a/src/app/core/product-feature/product-form/product-form.component.html
+++ b/src/app/core/product-feature/product-form/product-form.component.html
@@ -13,7 +13,7 @@
             </div>
             
         </div>
-        <div class="add-product__data">
+        <div class="add-product__data col-md-6">
             <div class="form-controls">
                 <section class="tabs">
                     <div class="tabs__bodies">
