--- a/src/app/core/product-feature/about-us/about-us.component.html
+++ b/src/app/core/product-feature/about-us/about-us.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid">
   <div class="row">
 <div class="col-12 gradient">
-<h2 class="p-4 m-2">Our Vision</h2>
-<p class="h4 ps-5 ms-2 lh-base"> Our special taste with our perfect service will position us as a chain restarunt with the global presence</p>
+<h2 class="p-4 m-2 text-center">Our Vision</h2>
+<p class="h4 ps-5 ms-2 lh-base text-center"> Our special taste with our perfect service will position us as a chain restarunt with the global presence</p>
 <br>
 </div>
 </div>
 
 <div class="row">
 <div class="col-12 ">
-  <h2 class="p-4 m-2 orange">Our Products</h2>
-<p class="h4 ps-5 ms-2 lh-base black">
+  <h2 class="p-4 m-2 orange text-center">Our Products</h2>
+<p class="h4 ps-5 ms-2 lh-base black text-center">
    We prepare and cook the fresh chicken in our mix and the delicious sandwich with a selection of special sauces. We stand out and make our own desserts daily with a combination of delicious Nautilus chocolate cakes and fresh cakes. We have an excellent selection of delicious side dishes also served with soft drinks.
   </p>
 <br>
@@ -19,8 +19,8 @@
 
 <div class="row">
 <div class="col-12 gradient">
-  <h2 class="p-4 m-2">Objectives </h2>
-  <p class="h4 ps-5 ms-2 lh-base">for the first year of operations are "Become selected as the " Best new restarunt in the area by the local restaurant guide .</p>
+  <h2 class="p-4 m-2 text-center">Objectives </h2>
+  <p class="h4 ps-5 ms-2 lh-base text-center">for the first year of operations are "Become selected as the " Best new restarunt in the area by the local restaurant guide .</p>
   <br>
 </div>
 </div>
@@ -28,8 +28,8 @@
 
 <div class="row">
   <div class="col-12 ">
-  <h2 class="p-4 m-2 orange"> Keys to Success</h2>
-  <p class="h4 ps-5 ms-2 lh-base black">
+  <h2 class="p-4 m-2 orange text-center"> Keys to Success</h2>
+  <p class="h4 ps-5 ms-2 lh-base black text-center">
   The Keys to success will be restaurant design that will be both visually attractive to customers and designed for fast and efficient operations Employee training to insure the best chicken preparation techniques Marketing strategies aimed to build a solid base of loyal customers as well as maximizing the sales of high margin products
 </p>
 <br>
@@ -38,24 +38,24 @@
 
 <div class="row">
   <div class="col-12 gradient">
-<h2 class="p-4 m-2">Our Mission  </h2>
-<p class="h4 ps-5 ms-2 lh-base"> Our Mission is to accomplish these goals .Best service with best quality products Healthy and advance environment which people and connect diverse perspectives Provide different offer for customer satisfaction .</p>
+<h2 class="p-4 m-2 text-center">Our Mission  </h2>
+<p class="h4 ps-5 ms-2 lh-base text-center"> Our Mission is to accomplish these goals .Best service with best quality products Healthy and advance environment which people and connect diverse perspectives Provide different offer for customer satisfaction .</p>
 <br>
 </div>
 </div>
 
 <div class="row">
   <div class="col-12">
-<h2 class="p-4 m-2 orange">Future Plans</h2>
-<p class="h4 ps-5 ms-2 lh-base black"> We Plan to be chain and open other branches in all over Egypt to spread our best chicken taste  </p>
+<h2 class="p-4 m-2 orange text-center">Future Plans</h2>
+<p class="h4 ps-5 ms-2 lh-base black text-center"> We Plan to be chain and open other branches in all over Egypt to spread our best chicken taste  </p>
 <br>
 </div>
 </div>
 
 </div>
-
+<hr>
 <br>
-<h2 class="orange"><u>Working hours : </u></h2>
+<h2 class="orange text-center"><u>Working hours : </u></h2>
 <br><br>
 <table>
   <tr>
