--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -40,18 +40,32 @@
           </li>
           <!-- <li>
                     <a href="#" class="nav__link">Login</a>
-
                   </li> -->
+                  <!-- *ngIf="loggedIn" -->
+                  <li>
+                    <div class="nav-item dropdown">
+                      <a class="nav__link dropdown-toggle" href="#" role="button" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                      </a>
+                    
+                      <ul class="dropdown-menu log" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" routerLink="/product/listing">Dashboard</a></li>
+                        <div class="dropdown-divider"></div>
+                        <li><a class="dropdown-item" routerLink="/login">Login</a></li>
+                      </ul>
+                    </div>
+                  </li>
 
           <li class="nav-item">
             <a class="nav-link" [routerLink]>
               <app-dropdown>
                 <ng-container class="header">
-                  <div class="image image--small" style="background-image: url('assets/img/shopping-cart.png')">
-                    <div class="notification notification--danger">
+                  <!-- <div class="image image--small" style="background-image: url('assets/img/shopping-cart.png')"> -->
+                    <i class="fas fa-cart-arrow-down nav__link" style="font-size: 15px;"></i>
+                    <div class="notification notification--danger my-4">
                       {{addedProducts.length}}
                     </div>
-                  </div>
+                  <!-- </div> -->
                 </ng-container>
                 <ng-container class="body">
                   <!-- items -->
