login,register,forgot&resetpassword

--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,11 +1,9 @@
-<!-- form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm" -->
-
 <div class="container">
   <div class="row col-md-12">
     <div class="col-lg-3 col-md-2"></div>
     <div class="col-lg-6 col-md-8 login-box">
-      <div class="col-lg-12 login-key">
-        <i class="fa fa-key" aria-hidden="true"></i>
+      <div class="col-lg-12 login-key mt-5">
+        <i class="fas fa-laugh"></i>
       </div>
       <div class="col-lg-12 login-title">
         Welcome Back
@@ -30,8 +28,6 @@
         </div>
       </div>
 
-      <!-- <div class="row social-auth-links text-center"> -->
-      <!-- <p class="text-white">or</p><br><br> -->
       <a href="#" class="btn my-5 mx-2">
         <i class="fab fa-facebook mx-2"></i> Sign in using Facebook
       </a>
@@ -40,13 +36,10 @@
       </a>
       <br>
 
-      <p class="mb-2">
-        <a routerLink="/forgot-password" class="text-center">I forgot my password</a>
+      <p class="">
+        <a routerLink="/forgot-password" class="text-center mb-2 my-4 links">I forgot my password</a>
       </p>
-      <p class="mb-5">
-        <a routerLink="/register" class="text-center">Register a new membership</a>
-      </p>
-
-
+        <h4 class="text-white mb-5">Not a member? <a routerLink="/register" class="text-center links">Register</a>
+        </h4>  
     </div>
   </div>
