contact-us component

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -33,10 +33,10 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav__link" href="#services">About</a>
+            <a class="nav__link" >About us</a>
           </li>
           <li class="nav-item">
-            <a class="nav__link" href="#portfolio">Contact Us</a>
+            <a class="nav__link"routerLink="/contact-us">Contact Us</a>
           </li>
           <!-- <li>
                     <a href="#" class="nav__link">Login</a>
