--- a/src/app/layout/paging/paging.component.html
+++ b/src/app/layout/paging/paging.component.html
@@ -1,14 +1,1 @@
-<div class="paging">
-    <!-- left arrow -->
-    <div class="paging__arrow">
-        <i class="fas fa-angle-left"></i>
-    </div>
-    <!-- page number -->
-    <div class="paging__number active">1</div>
-    <div class="paging__number">2</div>
-    <div class="paging__number">3</div>
-    <!-- right arrow -->
-    <div class="paging__arrow">
-        <i class="fas fa-angle-right"></i>
-    </div>
-</div>
+<p>paging works!</p>
