--- a/src/app/layout/footer/footer/footer.component.scss
+++ b/src/app/layout/footer/footer/footer.component.scss
@@ -112,7 +112,7 @@ ul {
 	ul {
 		li {
 			display: inline-block;
-			float: left;
+			// float: left;
 			width: 50%;
 			margin-bottom: 12px;
 			a {
