--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -11,15 +11,15 @@
 
       <div class="col-lg-12 login-form">
         <div class="col-lg-12 login-form">
-          <form>
+          <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
             <div class="form-group">
               <label class="form-control-label w-50 mx-auto"><span class="fas fa-envelope"></span> Email</label>
-              <input type="text" class="form-control w-50 mx-auto" ngModel>
+              <input type="text" class="form-control w-50 mx-auto" [ngModelOptions]="{standalone: true}" name= "email" ngModel>
 
             </div>
             <div class="form-group">
               <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
-              <input type="password" class="form-control w-50 mx-auto" ngModel>
+              <input type="password" class="form-control w-50 mx-auto" [ngModelOptions]="{standalone: true}" name= "password" ngModel>
             </div>
 
             <button type="submit" class="btn login">LOGIN</button><br><br>
