made view cart and checkout an total price

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -8,3 +8,10 @@ color: #ff5e14 !important;
     font-size: 15px;
     background-color: #cfc8c5;
 }
+
+
+.gray{
+  background-color: #cfc8c5;
+}
+
+
