--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -47,7 +47,7 @@
                       <a class="nav__link dropdown-toggle" href="#" role="button" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fa fa-user" aria-hidden="true"></i>
                       </a>
-                    
+
                       <ul class="dropdown-menu log" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" routerLink="/product/listing" *ngIf="loggedIn">Dashboard</a></li>
                         <div class="dropdown-divider" *ngIf="loggedIn"></div>
@@ -96,16 +96,10 @@
                     </li>
 
                   </ul>
-                  <!-- totals -->
-                  <div class="separator"></div>
-                  <div class="block">
-                    <span class="lable">Total:</span>
-                    <span class="lable">$0</span>
-                  </div>
                   <!-- actions -->
                   <div class="block list list--hr">
-                    <a class="list-item btn btn-primary" href="">View Cart</a>
-                    <a class="list-item btn btn-danger" href="">Checkout</a>
+                    <a class="list-item btn gray" routerLink="/view-cart">View Cart</a>
+                    <a class="list-item btn gray"  routerLink="/checkout">Checkout</a>
                   </div>
                 </ng-container>
               </app-dropdown>
