about and footer changes

--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -1,22 +1,4 @@
-<!-- <section class="container-fluid bg-dark ff">
-    <div class="row d-flex p-5">
-    <div class="col-sm-7">
-      <h3>Our Newsletter</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias commodi nulla quas optio est voluptates?</p>
-    </div>
-    <div class="col-sm-4 d-flex">
-      <input class="form-control my-auto w-50" type="search" placeholder="enter your email" aria-label="Search">
-      <button class="btn btn-outline-primary my-auto" type="submit">Subscribe</button>
-    </div>
-    </div>
-    
-    <div class="row text-center border-top p-3 my-auto">
-    <h6>&copy; All rights reserved.</h6>
-    </div>
-    </section>
-     -->
-
-     <footer class="footer-section mt-3">
+     <footer class="footer-section">
       <div class="container">
         <div class="row">
           <div class="footer-cta pt-5 pb-5">
@@ -89,16 +71,51 @@
                   <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
                       <div class="footer-widget">
                           <div class="footer-widget-heading">
-                              <h3>Subscribe</h3>
-                          </div>
-                          <div class="footer-text mb-25">
-                              <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
+                              <h3>working hours</h3>
                           </div>
                           <div class="subscribe-form">
-                              <form action="#">
-                                  <input type="text" placeholder="Email Address">
-                                  <button><i class="fab fa-telegram-plane"></i></button>
-                              </form>
+                            <table border="2" class="table">
+                                <tr>
+                                  <th>Day</th>
+                                  <th>From</th>
+                                  <th>To</th>
+                                </tr>
+                                <tr>
+                                  <td>Saturday</td>
+                                  <td>12:00 am</td>
+                                  <td>10:00 pm</td>
+                                </tr>
+                                <tr>
+                                  <td>Sunday</td>
+                                  <td>12:00 am</td>
+                                  <td>10:00 pm</td>
+                                </tr>
+                                <tr>
+                                  <td>Monday</td>
+                                  <td>12:00 am</td>
+                                  <td>10:00 pm</td>
+                                </tr>
+                                <tr>
+                                  <td>Thursday</td>
+                                  <td>12:00 am</td>
+                                  <td>10:00 pm</td>
+                                </tr>
+                                <tr>
+                                  <td>Wednesday</td>
+                                  <td>12:00 am</td>
+                                  <td>10:00 pm</td>
+                                </tr>
+                                <tr>
+                                  <td>Tuesday</td>
+                                  <td>12:00 am</td>
+                                  <td>12:00 pm</td>
+                                </tr>
+                                <tr>
+                                  <td>Friday</td>
+                                  <td>12:00 am</td>
+                                  <td>12:00 pm</td>
+                                </tr>
+                              </table>
                           </div>
                       </div>
                   </div>
@@ -111,7 +128,7 @@
               <div class="row col-xl-12">
                   <div class="col-xl-6 col-lg-6 text-center text-lg-left">
                       <div class="copyright-text">
-                          <p>Copyright &copy; 2018, All Right Reserved <a href="#">ITI student</a></p>
+                          <p>Copyright &copy; 2022, All Right Reserved <a href="#">ITI student</a></p>
                       </div>
                   </div>
                   <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
