--- a/src/app/core/product-feature/about-us/about-us.component.scss
+++ b/src/app/core/product-feature/about-us/about-us.component.scss
@@ -1,9 +1,13 @@
 tr:nth-child(even) {background: #595C5F;color: #FFF;}
 tr:nth-child(odd) {background: #FFF}
-table{font-size: 18px;
-  font-family: arial, sans-serif;
+table{
+  font-size: 18px;
   border-collapse: collapse;
-  width: 100%;}
+  width: 50%;
+  margin: auto;
+  margin-bottom: 3%;
+  text-align: center;
+}
   div.gradient{
     background-image: linear-gradient(90deg,  #FF5E14 ,#595C5F)
   }
@@ -14,9 +18,13 @@ table{font-size: 18px;
   p{
     color:#FFF;
 }
-h2
-{color: #FFF;}
+h2{
+color: #FFF;
+text-decoration: underline;
+}
 
 .orange{
   color: #FF5E14;
 }
+
+
