--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -104,7 +104,7 @@
                   <!-- actions -->
                   <div class="block list list--hr">
                     <a class="list-item btn btn-primary" href="">View Cart</a>
-                    <a class="list-item btn btn-danger" href="">Checkout</a>
+                    <a class="list-item btn btn-danger"  routerLink="/checkout">Checkout</a>
                   </div>
                 </ng-container>
               </app-dropdown>
