--- a/src/app/core/product-feature/product-filtering/product-filtering.component.scss
+++ b/src/app/core/product-feature/product-filtering/product-filtering.component.scss
@@ -4,9 +4,6 @@ ul{
 li{
     background-color: #595c5f;
 }
-li h5{
-    color: #fff;
-}
-li h5:hover{
-    color: #ff5e14;
-}
+li:hover{
+    color: #ff5e14 !important;
+    }
