--- a/src/app/core/product-feature/product-listing/product-listing.component.html
+++ b/src/app/core/product-feature/product-listing/product-listing.component.html
@@ -28,7 +28,7 @@
 
   <pagination-controls
   (pageChange)="p = $event"
-  class="float-right d-block">
+  class="d-flex justify-content-end fs-5 me-5 mb-5">
   </pagination-controls>
 
 </section>
