--- a/src/app/core/product-feature/contact-us/contact-us.component.scss
+++ b/src/app/core/product-feature/contact-us/contact-us.component.scss
@@ -1,5 +1,5 @@
 .contact-Us{
-    background-image: url('../../../../assets/img/waterColorPaper.jpg');
+    // background-image: url('../../../../assets/img/waterColorPaper.jpg');
     background-size: cover;
     background-position: center;
 }
